--- a/src/client/accent.css
+++ b/src/client/accent.css
@@ -11,12 +11,13 @@ h1 {
 button {
     background-color: cornflowerblue;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 15px;
+    font-size: 12px;
 }
 
 button:hover {
     background-color: darkblue;
-    text-decoration: darkgrey;
+    text-line-through-color: darkgrey;
 }
 
 .answerButtons {
@@ -26,6 +27,11 @@ button:hover {
 }
 
 .restart {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.start {
     margin-left: auto;
     margin-right: auto;
 }
